<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".main.view.MainActivity">

    <TextView
        android:id="@+id/tv_first_input"
        style="@style/Text.H2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center_horizontal"
        android:text="@string/label_first_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_first_input"
        style="@style/Text.H1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:background="@null"
        android:gravity="center_horizontal"
        android:hint="@string/hint_currency"
        android:inputType="number"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_first_input"/>

    <TextView
        android:id="@+id/tv_second_input"
        style="@style/Text.H2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center_horizontal"
        android:text="@string/label_second_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_first_input"/>

    <EditText
        android:id="@+id/et_second_input"
        style="@style/Text.H1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:background="@null"
        android:gravity="center_horizontal"
        android:hint="@string/hint_date"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:tag="empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_second_input"/>

    <TextView
        android:id="@+id/tv_third_input"
        style="@style/Text.H2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center_horizontal"
        android:text="@string/label_third_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_second_input"/>

    <EditText
        android:id="@+id/et_third_input"
        style="@style/Text.H1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:background="@null"
        android:gravity="center_horizontal"
        android:hint="@string/hint_percent"
        android:inputType="number"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_third_input"/>

    <Button
        android:id="@+id/bt_simulate"
        style="@style/ButtonRounded"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_button"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:text="@string/button_simulate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorBlackTransparent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>